WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151630
Modern IDB: openCursor() fix resulting in at least 4 more passing tests
https://bugs.webkit.org/show_bug.cgi?id=151630
Summary
Modern IDB: openCursor() fix resulting in at least 4 more passing tests
Brady Eidson
Reported
2015-11-26 22:39:45 PST
Modern IDB: openCursor() fix resulting in at least 4 more passing tests Fix will rely on
https://bugs.webkit.org/show_bug.cgi?id=151627
so I won't bother posting the patch until it is reviewed/landed
Attachments
Patch v1
(5.47 KB, patch)
2015-11-27 13:25 PST
,
Brady Eidson
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews102 for mac-yosemite
(792.55 KB, application/zip)
2015-11-27 14:10 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from ews116 for mac-yosemite
(833.85 KB, application/zip)
2015-11-27 14:16 PST
,
Build Bot
no flags
Details
Patch v2
(35.19 KB, patch)
2015-11-27 21:38 PST
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2015-11-27 13:25:48 PST
Created
attachment 266203
[details]
Patch v1
Brady Eidson
Comment 2
2015-11-27 13:35:11 PST
This will probably introduce failures on some modern tests that are straight up wrong. Looking at it now.
Build Bot
Comment 3
2015-11-27 14:10:38 PST
Comment on
attachment 266203
[details]
Patch v1
Attachment 266203
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/485921
New failing tests: storage/indexeddb/modern/index-cursor-1.html storage/indexeddb/modern/index-cursor-3.html storage/indexeddb/modern/deleteindex-2.html storage/indexeddb/modern/index-4.html storage/indexeddb/modern/index-cursor-2.html storage/indexeddb/modern/deleteindex-1.html
Build Bot
Comment 4
2015-11-27 14:10:40 PST
Created
attachment 266204
[details]
Archive of layout-test-results from ews102 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 5
2015-11-27 14:16:25 PST
Comment on
attachment 266203
[details]
Patch v1
Attachment 266203
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/485919
New failing tests: storage/indexeddb/modern/index-cursor-1.html storage/indexeddb/modern/index-cursor-3.html storage/indexeddb/modern/deleteindex-2.html storage/indexeddb/modern/index-4.html storage/indexeddb/modern/index-cursor-2.html storage/indexeddb/modern/deleteindex-1.html
Build Bot
Comment 6
2015-11-27 14:16:27 PST
Created
attachment 266205
[details]
Archive of layout-test-results from ews116 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews116 Port: mac-yosemite Platform: Mac OS X 10.10.5
Brady Eidson
Comment 7
2015-11-27 21:38:33 PST
Created
attachment 266209
[details]
Patch v2
WebKit Commit Bot
Comment 8
2015-11-30 10:21:28 PST
Comment on
attachment 266209
[details]
Patch v2 Clearing flags on attachment: 266209 Committed
r192800
: <
http://trac.webkit.org/changeset/192800
>
WebKit Commit Bot
Comment 9
2015-11-30 10:21:32 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug